--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
+    text-decoration: none;  
+    background: #FAFAFA;  
 }
 body {
     scroll-behavior: smooth;
@@ -20,7 +21,9 @@ img {
 .nav {
     padding-top: 45px;
     padding-bottom: 95px;
-    gap:650px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .home {
@@ -45,7 +48,6 @@ img {
 }
 .menu {
     display: flex;
-    justify-content: right;
     gap: 40px;
 }
 .main {
@@ -61,7 +63,6 @@ img {
 }
 .text {
     font-family: Gilroy-Medium;
-    font-family: 'Gilroy-Medium';
     font-size: 20px;
     line-height: 23px;
     color: #888888;
@@ -92,9 +93,8 @@ img {
     line-height: 18px;
     cursor: pointer;
     border: none;
-    background-color: #FFFFFF;
-    color: #AAAAAA;
-    
+    background-color: #FAFAFA; 
+    color: #AAAAAA;   
 }
 .footer {
     margin-top: 162px;
@@ -119,4 +119,91 @@ img {
 @font-face {
     font-family: Gilroy-Semibold;
     src: url(/fonts/Gilroy-Semibold.woff2);
+}
+@font-face {
+    font-family: Gilroy-Regular;
+    src: url(/fonts/Gilroy-Regular.woff2);
+}
+.info {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px; 
+}
+.item {
+    width: 370px;
+    height: 291px;
+    padding-right: 30px;
+    padding-left: 30px;
+    display: flex;
+    flex-direction:column;
+    align-items:flex-start;
+    text-align:start;
+    font-size: 15px;
+    line-height: 23px;
+    gap:30px;
+}
+.item_2 {
+    background: #FFFFFF;
+}
+
+.title_2 {
+    padding-top: 92px;
+    font-family: Gilroy-Bold;
+    font-size: 45px;
+    line-height: 53px;
+    display:flex;
+    justify-content: space-around;
+  
+}
+.p {
+    padding-top: 19px;
+    padding-bottom: 54px;
+    width: 682px;
+    font-family: Gilroy-Regular;
+    font-size: 16px;
+    color: #666666;
+    line-height: 150%;
+    text-align: center;
+    margin-left: 245px;   
+}
+.reasons {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;   
+}
+.reason {
+    width: 370px;
+    height: 549px; 
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    text-align:center;
+    gap: 30px;
+    font-size: 15px;
+    line-height: 23px;
+    color: #AAAAAA;
+    background: #FFFFFF; 
+}
+h4 {
+    font-size: 24px;
+    font-family: Gilroy-Bold;
+    font-style: normal;
+    color: #000000;
+}
+p{
+    font-family: Gilroy-Regular;
+    width: 310px;
+}
+.more {
+    padding: 15px 36px;
+    margin-top: 52px;
+    font-family: Gilroy-Bold ;
+    font-size: 13px;
+    line-height: 20px;
+    cursor: pointer;
+    background-color: #F25822;
+    border: none;
+    box-shadow: 4px 4px 8px rgba(242, 88, 34, 0.2);
+    border-radius: 50px;
+    color: #FFFFFF
 }
